# pyopenxlsx

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  GEMINI.md  LICENSE  README.md  create_pandas_demo.py  pyproject.toml  test_1m.py
.github/workflows/: build.yml  docs.yml
docs/: 01_workbook.md  02_worksheet.md  03_cell_range.md  04_styles.md  05_data_validation.md  06_tables.md  07_pivot_tables.md  08_rich_text.md  09_async_operations.md  10_conditional_formatting.md  11_streams.md  14_images.md  14_images_and_shapes.md  15_formula_engine.md  17_encryption.md  18_pandas.md  conf.py  index.rst
docs/_build/doctrees/: 01_workbook.doctree  02_worksheet.doctree  03_cell_range.doctree  04_styles.doctree  05_data_validation.doctree  06_tables.doctree  07_pivot_tables.doctree  08_rich_text.doctree  09_async_operations.doctree  10_conditional_formatting.doctree  11_streams.doctree  12_charts.doctree  13_page_setup.doctree  14_images.doctree  14_images_and_shapes.doctree  15_formula_engine.doctree  16_comments.doctree  17_encryption.doctree  api_reference.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  01_workbook.html  02_worksheet.html  03_cell_range.html  04_styles.html  05_data_validation.html  06_tables.html  07_pivot_tables.html  08_rich_text.html  09_async_operations.html  10_conditional_formatting.html  11_streams.html  12_charts.html  13_page_setup.html  14_images.html  14_images_and_shapes.html  15_formula_engine.html  16_comments.html  17_encryption.html  api_reference.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pyopenxlsx/: cell.html  column.html  data_validation.html  formula.html  formula_engine.html  merge.html  page_setup.html  range.html  styles.html  table.html  workbook.html  worksheet.html
docs/_build/html/_sources/: 02_worksheet.md.txt  04_styles.md.txt  06_tables.md.txt  07_pivot_tables.md.txt  10_conditional_formatting.md.txt  11_streams.md.txt  12_charts.md.txt  13_page_setup.md.txt  14_images_and_shapes.md.txt  16_comments.md.txt  api_reference.rst.txt  index.rst.txt
src/: autofilter.cpp  bindings.cpp  bindings.hpp  cell.cpp  chart.cpp  comments.cpp  conditional_formatting.cpp  constants.cpp  data_validation.cpp  defined_names.cpp  document.cpp  formula_engine.cpp  internal_access.hpp  page_setup.cpp  pivot_table.cpp  rich_text.cpp  streams.cpp  styles.cpp  tables.cpp  types.cpp  workbook.cpp  worksheet.cpp
src/pyopenxlsx/: __init__.py  __init__.pyi  _openxlsx.pyi  autofilter.py  autofilter.pyi  cell.py  cell.pyi  column.py  column.pyi  data_validation.py  data_validation.pyi  formula.py  formula.pyi  formula_engine.py  formula_engine.pyi  merge.py  merge.pyi  page_setup.py  range.py  range.pyi  styles.py  styles.pyi  table.py  workbook.py  workbook.pyi  worksheet.py  worksheet.pyi
tests/: test_async.py  test_autofilter.py  test_benchmark.py  test_bulk_read.py  test_cell.py  test_charts_and_pivot.py  test_column.py  test_comments.py  test_compat_openpyxl.py  test_conditional_formatting.py  test_content_types.py  test_coverage_boost.py  test_coverage_boost_extra.py  test_data_validation.py  test_datetime.py  test_defined_names.py  test_document.py  test_encryption.py  test_enhanced_cells.py  test_enhanced_worksheet.py  test_formula.py  test_formula_engine.py  test_image.py  test_image_extraction.py  test_memory_safety.py  test_merge_cells.py  test_ooxml_data_validation.py  test_ooxml_verification.py  test_overwrite.py  test_page_setup.py  test_page_setup_extras.py  test_pandas.py  test_properties.py  test_protection.py  test_range.py  test_range_extras.py  test_read_write.py  test_rich_text.py  test_shapes.py  test_sparkline_options.py  (+12 more)
