[build-system]
requires = ["scikit-build-core", "pybind11==3.0.1"]
build-backend = "scikit_build_core.build"

[project]
name = "pyopenxlsx"
version = "0.2.3"
description = "Python bindings for OpenXLSX using pybind11"
readme = "README.md"
authors = [{name = "curry tang", email = "twn39@163.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["excel", "xlsx", "openxlsx", "pybind11", "high-performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/twn39/pyopenxlsx"
Repository = "https://github.com/twn39/pyopenxlsx"
Issues = "https://github.com/twn39/pyopenxlsx/issues"

[project.optional-dependencies]
test = [
    "openpyxl>=3.1.5",
    "pillow>=12.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "numpy>=1.26.0",
]

[tool.scikit-build]
cmake.version = ">=3.15"
wheel.packages = ["src/pyopenxlsx"]
sdist.include = [
    "third_party/OpenXLSX/third_party/pugixml/src",
    "third_party/OpenXLSX/third_party/pugixml/scripts",
    "third_party/OpenXLSX/third_party/pugixml/CMakeLists.txt",
    "third_party/OpenXLSX/third_party/pugixml/LICENSE.md",
    "third_party/OpenXLSX/third_party/nowide/include",
    "third_party/OpenXLSX/third_party/nowide/src",
    "third_party/OpenXLSX/third_party/nowide/CMakeLists.txt",
    "third_party/OpenXLSX/third_party/nowide/LICENSE",
    "third_party/OpenXLSX/third_party/nowide/cmake",
    "third_party/OpenXLSX/third_party/nowide/config",
]
sdist.exclude = [
    "**/Benchmarks",
    "**/Examples",
    "third_party/**/tests",
    "third_party/**/test",
    "third_party/**/docs",
    "third_party/**/.git",
    "third_party/**/.github",
    ".idea",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "htmlcov",
]

[tool.cibuildwheel]
build-frontend = "build[uv]"
test-extras = ["test"]
test-command = "pytest {project}/tests -k \"not benchmark\""
build-verbosity = "1"

# Skip Python versions before 3.11
skip = ["cp39-*", "cp310-*"]

[tool.cibuildwheel.linux]
before-all = "(command -v yum && yum install -y zlib-devel) || (command -v apk && apk add zlib-dev) || (command -v apt-get && apt-get update && apt-get install -y zlib1g-dev)"

[tool.cibuildwheel.macos]
# For macOS, we might need to ensure certain environment variables are set
# but scikit-build-core usually handles this well.

[tool.cibuildwheel.windows]
# Windows usually works fine with scikit-build-core and MSVC

[dependency-groups]
dev = [
    "clang-tidy>=21.1.6",
    "openpyxl>=3.1.5",
    "pillow>=12.1.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.0",
    "ty>=0.0.15",
    "pytest-benchmark>=4.0.0",
    "numpy>=1.26.0",
]

[tool.pytest.ini_options]
addopts = "--cov=pyopenxlsx --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
norecursedirs = ["third_party"]

[tool.coverage.run]
source = ["src/pyopenxlsx"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.ty.analysis]
allowed-unresolved-imports = ["pyopenxlsx._openxlsx"]
